fixing dark mode bottom color

--- a/otf_dark_style_sheet.css
+++ b/otf_dark_style_sheet.css
@@ -24,7 +24,7 @@
 
         #bottom {
             font-family: 'Trebuchet MS', sans-serif;
-            background-color: #302e2d;
+            background-color: #1b1a19;
             border-radius: 0px 0px 25px 25px;
             text-align: center;
             width: 80%;
